# ValueLens

./: .gitignore  .pre-commit-config.yaml  README.md  app.py  pyproject.toml
src/valuelens/: app_logic.py  filtering.py  logger.py  schemas.py  scraping.py  summarizer.py
src/valuelens/db/: database.py  debug_db.py  models.py  repository.py  storage.py
src/valuelens/filter_text/: matchers.py  text_analyzer.py
src/valuelens/scraping/: crawler.py  extract_with_headers.py  scrapers.py  simple_extract.py
src/valuelens/scraping/extractors/: extract_with_headers.py  factory.py  simple_extract.py
tests/: test_filtering.py  test_scraping.py
tests/test_db/: conftest.py  test_storage.py
tests/test_filter_text/: test_matchers.py  test_text_analyzer.py
tests/test_scraping/: test_crawler.py  test_extract_with_headers.py  test_simple_extract.py
tests/test_scraping/test_extractors/: test_extract_with_headers.py  test_simple_extract.py
