[project]
name = "valuelens"
version = "0.1.0"
description = "ValueLens helps job seekers and professionals quickly extract and summarize a company’s mission and values from their website."
authors = [{name = "Piotr Grabysz"}]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.101.0",
    "streamlit>=1.48.1",
    "trafilatura>=2.0.0",
]

[tool.ruff]
line-length = 100
fix = true

[tool.ruff.lint]
select = [
    "F",  # Pyflakes
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "C90",# mccabe complexity
    "I",  # import sorting
    "N",  # pep8-naming
    "UP", # pyupgrade
    "B",  # flake8-bugbear
    "S",  # flake8-bandit (security)
    "A",  # flake8-builtins
    "DTZ",# datetime
    "TRY",# try-except hygiene
    "EM", # string formatting
]
ignore = [
    "E501",  # Ruff formatter handles long lines
]

[tool.ruff.lint.isort]
known-first-party = ["valuelens"]
combine-as-imports = true
