[project]
name = "valuelens"
version = "0.1.0"
description = "ValueLens helps job seekers and professionals quickly extract and summarize a company’s mission and values from their website."
authors = [{name = "Piotr Grabysz"}]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.5",
    "openai>=1.101.0",
    "streamlit>=1.48.1",
    "trafilatura>=2.0.0",
]
[dependency-groups]
lint = [
    "ruff>=0.12.10",
]
tests = [
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
]

[tool.ruff]
line-length = 100
fix = true

target-version = "py312"

[tool.ruff.lint]
select = [
    "F",  # Pyflakes
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "C90",# mccabe complexity
    "I",  # import sorting
    "N",  # pep8-naming
    "UP", # pyupgrade
    "B",  # flake8-bugbear
    "S",  # flake8-bandit (security)
    "A",  # flake8-builtins
    "DTZ",# datetime
    "TRY",# try-except hygiene
    "EM", # string formatting
]
ignore = [
    "E501",     # Ruff formatter handles long lines
    "TRY003",   # Avoid specifying long messages outside the exception class
    "EM101",    # Exception must not use a string literal, assign to variable first
]
[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["S101"]

[tool.ruff.lint.isort]
known-first-party = ["valuelens"]
combine-as-imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --cov=src --cov-report=term-missing --cov-fail-under=80"
testpaths = ["tests"]
markers = [
    "integration: marks tests that hit the internet or external services"
]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
show_missing = true
skip_covered = true

